--- a/index.html
+++ b/index.html
@@ -10,9 +10,12 @@
     <title>Blog Curso Git</title>
 </head>
 <body>
-    <div>
-        <img src="img/logo_git.png">
+    <div class="bar">
+        <img class="logo" src="img/logo_git.png">
         <h1>Blog Curso Git</h1>
+    </div>
+    <div>
+        Aqui se añadira el contenido del blog.
     </div>
 </body>
 </html>
