--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="bar">
         <img class="logo" src="img/logo_git.png">
-        <h1>Blog Curso Git</h1>
+        <h1>Blog Curso Git & Github</h1>
     </div>
     <div>
         <h1>Ranking de Videojuegos para PC 2023</h1>
