--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
         <img class="logo" src="img/logo_git.png">
         <h1>Blog Curso Git & Github</h1>
     </div>
+    <div>
+        Aquí ira la publicidad.
+    </div>
     <div class="container" id="content"> 
     </div>     
 </body>
