--- a/index.html
+++ b/index.html
@@ -13,7 +13,13 @@
 <body>
     <div class="bar">
         <img class="logo" src="img/logo_git.png">
-        <h1>Blog Curso Git & Github</h1>
+        <h1>Blog Curso Git & Github</h1>        
+        <ul>
+            <li><a class="active" href="#inicio">Inicio</a></li>
+            <li><a href="#noticias">Noticias</a></li>
+            <li><a href="#contacto">Contacto</a></li>
+            <li><a href="#acerca">Acerca</a></li>                        
+        </ul>        
     </div>
     <div>
         Aquí ira la publicidad.
